--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles/urls.css" />
   <title>URLS</title>
 </head>
 <body>
+  <nav class="navbar">
+    TinyApp
+  </nav>
   <h1>Urls Page</h1>
 </body>
 </html>
